@@ -9,6 +9,9 @@ To do :
 
 Log:
 
+- 21/02/2006, version 0.0.6: roms
+	- switched to ticonv library
+	
 - 20/02/2006, version 0.0.5: roms
 	- error message is a glib allocated string for now.
 
